--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
                 <h1 class="display-1 fw-bold my-5">
-                    CV Heidy Cardenas.
+                    CV Heidy Cardenas
                 </h1>
                 <p class="my-5">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
@@ -71,8 +71,9 @@
         <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
 
         <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
+            I consider myself a responsible person, dynamic and creative, with easy adaptation and capacity to work
+            as a team in high pressure conditions, with initiative to solve problems efficiently and achieve goals and
+            objectives drawn by the company.
         </p>
 
 
