--- a/index.html
+++ b/index.html
@@ -80,12 +80,11 @@
         <div class="row">
             <div class="col-12 col-md-4">
                 <i class="fas fa-camera fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
+                <h3 class="my-3 fw-bold">QA Analyst</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    With a strong background in customer service, I have honed my skills in effective time management,
+                    communication, adaptability, and a keen eye for detail. I am seeking a role as a QA Analyst where I can
+                    leverage my skills.
                 </p>
             </div>
             <div class="col-12 col-md-4">
